complete spark